@@ -36,70 +36,13 @@ namespace MonoDevelop.ClassDesigner.Figures {
 	
 	public class ClassFigure: TypeFigure {
 		
-		public ClassFigure(): base() {
-			fields = new TypeMemberGroupFigure(GettextCatalog.GetString("Fields"));
-			properties = new TypeMemberGroupFigure(GettextCatalog.GetString("Properties"));
-			methods = new TypeMemberGroupFigure(GettextCatalog.GetString("Methods"));
-			events = new TypeMemberGroupFigure(GettextCatalog.GetString("Events"));
-			
-			AddMemberGroup(fields);
-			AddMemberGroup(properties);
-			AddMemberGroup(methods);
-			AddMemberGroup(events);
+		public ClassFigure(IType domtype): base(domtype) {
 		}
 		
-		public ClassFigure(IType domtype): this() {
-			if (domtype == null || domtype.ClassType != ClassType.Class) {
-				throw new ArgumentException();
-			}
-			
-			Header.Name = domtype.Name;
-			Header.Namespace = domtype.Namespace;
-			Header.Type = domtype.ClassType.ToString();
-			
-			foreach (IField field in domtype.Fields) {
-				Pixbuf icon = Services.Resources.GetIcon(field.StockIcon, IconSize.Menu);
-				AddField(icon, field.ReturnType.Name, field.Name);
-			}
-			
-			foreach (IProperty property in domtype.Properties) {
-				Pixbuf icon = Services.Resources.GetIcon(property.StockIcon, IconSize.Menu);
-				AddProperty(icon, property.ReturnType.Name, property.Name);
-			}
-			
-			foreach (IMethod method in domtype.Methods) {
-				Pixbuf icon = Services.Resources.GetIcon(method.StockIcon, IconSize.Menu);
-				IReturnType ret = method.ReturnType;
-				if (ret != null) {
-					AddMethod(icon, ret.Name, method.Name);
-				}
-			}
-			
-			foreach (IEvent ev in domtype.Events) {
-				Pixbuf icon = Services.Resources.GetIcon(ev.StockIcon, IconSize.Menu);
-				AddMethod(icon, ev.ReturnType.Name, ev.Name);
+		protected override ClassType ClassType {
+			get {
+				return ClassType.Class;
 			}
 		}
-		
-		public void AddField(Pixbuf icon, string type, string name) {
-			fields.AddMember(icon, type, name);
-		}
-		
-		public void AddMethod(Pixbuf icon, string retvalue, string name) {
-			methods.AddMember(icon, retvalue, name);
-		}
-		
-		public void AddProperty(Pixbuf icon, string type, string name) {
-			properties.AddMember(icon, type, name);
-		}
-		
-		public void AddEvent(Pixbuf icon, string type, string name) {
-			events.AddMember(icon, type, name);
-		}
-		
-		TypeMemberGroupFigure fields;
-		TypeMemberGroupFigure properties;
-		TypeMemberGroupFigure methods;
-		TypeMemberGroupFigure events;
 	}
 }
