@@ -23,11 +23,17 @@
 // OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 // THE SOFTWARE.
 
+using System;
 using System.Collections.Generic;
+using Gtk;
+using Gdk;
 using MonoHotDraw.Figures;
 using MonoHotDraw.Handles;
 using MonoHotDraw.Util;
 using MonoHotDraw.Locators;
+using MonoDevelop.Core;
+using MonoDevelop.Projects.Dom;
+using MonoDevelop.Core.Gui;
 
 namespace MonoDevelop.ClassDesigner.Figures {
 
@@ -39,7 +45,7 @@ namespace MonoDevelop.ClassDesigner.Figures {
 			members = new VStackFigure();
 			Add(Header);
 
-			expandHandle = new ToggleButtonHandle(this, new AbsoluteLocator(20, 20));
+			expandHandle = new ToggleButtonHandle(this, new AbsoluteLocator(10, 20));
 			expandHandle.Toggled += delegate(object sender, ToggleEventArgs e) {
 				if (e.Active) {
 					Add(members);
@@ -49,6 +55,41 @@ namespace MonoDevelop.ClassDesigner.Figures {
 				}
 			};
 			expandHandle.Active = false;
+			
+			CreateGroups();
+		}
+		
+		public TypeFigure(IType domtype): this() {
+			if (domtype == null || domtype.ClassType != this.ClassType) {
+				throw new ArgumentException();
+			}
+			
+			Header.Name = domtype.Name;
+			Header.Namespace = domtype.Namespace;
+			Header.Type = domtype.ClassType.ToString();
+			
+			foreach (IField field in domtype.Fields) {
+				Pixbuf icon = Services.Resources.GetIcon(field.StockIcon, IconSize.Menu);
+				AddField(icon, field.ReturnType.Name, field.Name);
+			}
+			
+			foreach (IProperty property in domtype.Properties) {
+				Pixbuf icon = Services.Resources.GetIcon(property.StockIcon, IconSize.Menu);
+				AddProperty(icon, property.ReturnType.Name, property.Name);
+			}
+			
+			foreach (IMethod method in domtype.Methods) {
+				Pixbuf icon = Services.Resources.GetIcon(method.StockIcon, IconSize.Menu);
+				IReturnType ret = method.ReturnType;
+				if (ret != null) {
+					AddMethod(icon, ret.Name, method.Name);
+				}
+			}
+			
+			foreach (IEvent ev in domtype.Events) {
+				Pixbuf icon = Services.Resources.GetIcon(ev.StockIcon, IconSize.Menu);
+				AddMethod(icon, ev.ReturnType.Name, ev.Name);
+			}
 		}
 		
 		public override void BasicDrawSelected (Cairo.Context context) {
@@ -72,19 +113,17 @@ namespace MonoDevelop.ClassDesigner.Figures {
 			base.BasicDraw(context);
 		}
 		
-		public override bool ContainsPoint (double x, double y)
-		{
+		public override bool ContainsPoint (double x, double y) {
 			return DisplayBox.Contains(x, y);
 		}
-
 		
 		public override RectangleD DisplayBox {
 			get {
 				RectangleD rect = base.DisplayBox;
-				rect.X -= 30;
+				rect.X -= 20;
 				rect.Y -= 10;
 				rect.Width += 30;
-				rect.Height += 10;
+				rect.Height += 20;
 				return rect;
 			}
 			set {
@@ -105,11 +144,50 @@ namespace MonoDevelop.ClassDesigner.Figures {
 			get { return Header.Name; }
 		}
 		
+		public void AddField(Pixbuf icon, string type, string name) {
+			fields.AddMember(icon, type, name);
+		}
+		
+		public void AddMethod(Pixbuf icon, string retvalue, string name) {
+			methods.AddMember(icon, retvalue, name);
+		}
+		
+		public void AddProperty(Pixbuf icon, string type, string name) {
+			properties.AddMember(icon, type, name);
+		}
+		
+		public void AddEvent(Pixbuf icon, string type, string name) {
+			events.AddMember(icon, type, name);
+		}
+		
 		protected virtual void AddMemberGroup(VStackFigure group) {
 			members.Add(group);
 		}
 		
 		protected TypeHeaderFigure Header { get; set; }
+		
+		protected virtual void CreateGroups() {
+			fields = new TypeMemberGroupFigure(GettextCatalog.GetString("Fields"));
+			properties = new TypeMemberGroupFigure(GettextCatalog.GetString("Properties"));
+			methods = new TypeMemberGroupFigure(GettextCatalog.GetString("Methods"));
+			events = new TypeMemberGroupFigure(GettextCatalog.GetString("Events"));
+			
+			AddMemberGroup(fields);
+			AddMemberGroup(properties);
+			AddMemberGroup(methods);
+			AddMemberGroup(events);
+		}
+		
+		protected virtual ClassType ClassType {
+			get {
+				return ClassType.Unknown;
+			}
+		}
+		
+		protected TypeMemberGroupFigure fields;
+		protected TypeMemberGroupFigure properties;
+		protected TypeMemberGroupFigure methods;
+		protected TypeMemberGroupFigure events;
 		
 		private VStackFigure members;
 		private ToggleButtonHandle expandHandle;
